# python-advance-for-agentic-ai

./: Files.ipynb  OsModules.ipynb  README.md  data.csv  data.json  ms_data_science_df_grouped.csv  myfile.txt  pyproject.toml
myenv/: pyvenv.cfg
