[build-system]
# This section tells build tools what is required to build your package.
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Basic metadata
name = "python project"
version = "0.1.0"
description = "A brief description of my python project"
readme = "README.md"
# You can point to a file or include inline text for your license.
license = {"file" = "LICENSE"}

# Author information
authors = [
  { name = "Ahmed", email = "ahmed@example.com" }
]

# Project dependencies
dependencies = [
    # get all dependencies from requirements.txt
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]

# Optional: URL links related to your project
[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/example/my-awesome-project"
